--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Our Marketplace</title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Marketplace</h1>
+        <h1 id="welcome-message">Welcome to Our Marketplace</h1>
         <p>Join our WhatsApp group to start buying and selling!</p>
-        
         <button id="download-btn">Join WhatsApp Group</button>
+        <p><a href="login.html" style="color: white; text-decoration: underline;">Logout</a></p>
     </div>
 
     <script>
         document.getElementById('download-btn').addEventListener('click', function() {
-            window.location.href = 'https://chat.whatsapp.com/LWOGaSzwIKb9TXwAkAaPKF';
+            window.location.href = 'YOUR_WHATSAPP_GROUP_INVITE_LINK_HERE';
         });
 
-        // Personalize with stored user data
+        // Display the logged-in user's name
         const user = JSON.parse(localStorage.getItem('user'));
         if (user) {
-            document.querySelector('h1').innerText = `Welcome, ${user.name}!`;
+            document.getElementById('welcome-message').innerText = `Welcome, ${user.name}!`;
         }
     </script>
 </body>
