--- a/signup.html
+++ b/signup.html
@@ -21,3 +21,10 @@
     <script src="script.js"></script>
 </body>
 </html>
+<script>
+    // If a user is already logged in, redirect them to the homepage
+    if (localStorage.getItem('user')) {
+        window.location.href = "index.html";
+    }
+</script>
+
