--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>Welcome to My Web App</h1>
-    <a href="login.html">Login</a>
-    <a href="signup.html">Sign Up</a>
+    <a href="login.html">Login</a> | <a href="signup.html">Sign Up</a>
 </body>
 </html>
