--- a/home.html
+++ b/home.html
@@ -3,15 +3,4 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Home Page</h1>
-    <h2>Choose a Pathway</h2>
-    <ul>
-        <li><a href="ecommerce.html">E-Book Store</a></li>
-        <li><a href="updates.html">Latest Updates</a></li>
-    </ul>
-</body>
-</html>
+    <link rel="
