--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to My Website</h1>
         <nav>
             <a href="ebooks.html">📚 E-Books</a>
-            <a href="updates.html">🆕 Latest Updates</a>
+            <a href="#">||| Option</a> <!-- Placeholder for a future feature -->
         </nav>
     </header>
 
@@ -24,9 +24,9 @@
                 <a href="ebooks.html">Go to E-Books</a>
             </div>
             <div class="pathway">
-                <h3>Latest Updates</h3>
-                <p>Stay updated with the latest news.</p>
-                <a href="updates.html">Go to Updates</a>
+                <h3>||| Option</h3>
+                <p>This section will be added later.</p>
+                <a href="#">Coming Soon</a>
             </div>
         </div>
     </main>
@@ -40,3 +40,4 @@
     </script>
 </body>
 </html>
+
