--- a/book-details.html
+++ b/book-details.html
@@ -26,7 +26,7 @@
     { title: "The Wizard of Oz", cover: "https://raw.githubusercontent.com/TRASMIT/marketplace-website/main/Book%20Covers/b2a5b398a442f1776f00a09b8ed0d5c0.jpg", pdf: "https://TRASMIT.github.io/marketplace-website/E%20Books/wonderfulwizardo00baumiala.pdf" },
     { title: "Alice in Wonderland", cover: "https://raw.githubusercontent.com/TRASMIT/marketplace-website/main/Book%20Covers/il_fullxfull.1519409460_3v5o.avif", pdf: "https://TRASMIT.github.io/marketplace-website/E%20Books/alices-adventures-in-wonderland.pdf" },
     { title: "Sense and Sensibility", cover: "https://raw.githubusercontent.com/TRASMIT/marketplace-website/main/Book%20Covers/510gZLQ4A3S.jpg", pdf: "https://TRASMIT.github.io/marketplace-website/E%20Books/sense-and-sensibility.pdf" },
-    { title: "A Study in Scarlet", cover: "https://github.com/TRASMIT/marketplace-website/blob/main/Book%20Covers/9781847498724.jpg", pdf: "https://TRASMIT.github.io/marketplace-website/E%20Books/A_Study_in_Scarlet.pdf" }      
+    { title: "A Study in Scarlet", cover: "https://raw.githubusercontent.com/TRASMIT/marketplace-website/main/Book%20Covers/9781847498724.jpg", pdf: "https://TRASMIT.github.io/marketplace-website/E%20Books/A_Study_in_Scarlet.pdf" }      
 ];
 
         function getBookIndex() {
